bug: fixed extra padding in header page generated by unscoped styles of color game component

--- a/src/app/color-game/color-game.component.css
+++ b/src/app/color-game/color-game.component.css
@@ -1,4 +1,4 @@
-.wrapper {
+.color-game-wrapper {
   padding: var(--spacing-12, 48px) 0;
 }
 
